# DarkVpn

./: .env  Dockerfile  README.md  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 67146dad274a_init_tables.py
app/: main.py
app/core/: config.py  marzban.py
app/db/: __init__.py  base.py  models.py  session.py
app/routers/: admin.py  payments.py
app/services/: payment.py  subscription.py
bot/: Dockerfile  main.py
bot/handlers/: payment.py  start.py  subscription.py
bot/keyboards/: __init__.py  main.py
nginx/: nginx.conf
worker/: celery_app.py  tasks.py
